fixed text alignment for app buttons

--- a/pages/application/application.css
+++ b/pages/application/application.css
@@ -120,6 +120,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 
     margin: 20px;
     font-size: 20px;
